# MIPT-CPU

./: CMakeLists.txt
Assembly/: assembly.c  main.c
Assembly/include/: assembly.h
Dependencies/: CMakeLists.txt  fileManager.c
Dependencies/include/: errorCodes.h  fileManager.h
